@@ -1399,11 +1399,8 @@ int main(int argc, char **argv)
     }
     else
     {
-#ifdef WIN32
-        const char *definition_path = "../definitions";
-#else
         const char *definition_path = "../share/" PACKAGE "/definitions";
-#endif
+
         if (coda_set_definition_path_conditional(argv[0], NULL, definition_path) != 0)
         {
             fprintf(stderr, "ERROR: %s\n", coda_errno_to_string(coda_errno));
